--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title> GitHub Foundations training </title>
-<link href="css/home.css"></link>
+<link href="css/home.css" />
 </head>
 <body>
 
