Updating index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <h1>Github Foundations</h1>
 <h2>June 24, 2014</h2>
 
-This is just the text to occupy this page.
+This is just the text to occupy this page for now.
 </body>
 </html>
+
